change of country

--- a/beginner2/index.html
+++ b/beginner2/index.html
@@ -11,7 +11,7 @@
     <div class="contents">
       <img src="IMG-20210130-WA0008.jpg" alt="my pic">
       <h1>Ahmad Magaji A.</h1>
-      <h2>London, United Kingdom</h2>
+      <h2>Minna - Niger, Nigeria</h2>
     </div>
     <div class="contents">
       <h3>"Front-end developer and avid reader"</h3>
